# baldwars-game

./: .gitignore  CMakeLists.txt  LICENSE  README.md
resources/: weapons1.json  weapons2.json
src/: CMakeLists.txt  actions.json  main.c  warriors.json  weapons.json
src/ai_tools/: tools.c  tools.h
src/game/: game.c  game.h  game_struct.h
src/game_function/: game_function.c  game_function.h  game_struct.h
src/json_file_management/: jsonActionLog.c  jsonActionLog.h
src/lib/: cJSON.c
src/path_finding/: path_finding.c  path_finding.h
src/scripts/: scripts.h  user1.c  user2.c
src/utils/: path_finding.c  path_finding.h  utils.c  utils.h
